--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "jabernardo/saddle": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
